<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cst_bg_main">

    <com.android.boot.ui.GameView
        android:id="@+id/game_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/cst_hud_height"
        android:layout_marginEnd="@dimen/cst_sidebar_w"
        android:layout_marginBottom="@dimen/cst_command_h"
        android:layout_marginStart="@dimen/cst_pad_8" />

    <LinearLayout
        android:id="@+id/top_hud"
        style="@style/Widget.Game.Panel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cst_hud_height"
        android:layout_gravity="top"
        android:background="@drawable/ui_panel_header"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scrap_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/cst_hud_badge_min_w"
            android:text="@string/hud_scrap"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/fuel_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_8"
            android:minWidth="@dimen/cst_hud_badge_min_w"
            android:text="@string/hud_fuel"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/parts_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_8"
            android:minWidth="@dimen/cst_hud_badge_min_w"
            android:text="@string/hud_parts"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/night_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_8"
            android:minWidth="@dimen/cst_hud_badge_min_w"
            android:text="@string/hud_night"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/objective_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cst_pad_8"
            android:layout_weight="1"
            android:text="@string/hud_objective"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <Button
            android:id="@+id/pause_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pause" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sector_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="@dimen/cst_sidebar_w"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/cst_hud_height"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hud_sector"
            android:textAppearance="@style/TextAppearance.Game.Subtitle" />

        <Button
            android:id="@+id/sector_north_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:text="@string/sector_north" />

        <Button
            android:id="@+id/sector_east_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/sector_east" />

        <Button
            android:id="@+id/sector_south_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/sector_south" />

        <Button
            android:id="@+id/sector_west_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/sector_west" />

        <TextView
            android:id="@+id/integrity_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/hud_integrity"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />

        <TextView
            android:id="@+id/focus_text"
            style="@style/Widget.Game.Badge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/hud_focus"
            android:textAppearance="@style/TextAppearance.Game.HudValue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/command_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cst_command_h"
        android:layout_gravity="bottom|start"
        android:layout_marginEnd="@dimen/cst_sidebar_w"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/barricade_button"
                    style="@style/Widget.Game.Button.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_barricade" />

                <Button
                    android:id="@+id/gun_nest_button"
                    style="@style/Widget.Game.Button.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cst_pad_6"
                    android:text="@string/btn_gun_nest" />

                <Button
                    android:id="@+id/spike_button"
                    style="@style/Widget.Game.Button.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cst_pad_6"
                    android:text="@string/btn_spike_trap" />

                <Button
                    android:id="@+id/flame_button"
                    style="@style/Widget.Game.Button.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cst_pad_6"
                    android:text="@string/btn_flame_pipe" />

                <Button
                    android:id="@+id/arc_button"
                    style="@style/Widget.Game.Button.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cst_pad_6"
                    android:text="@string/btn_arc_lamp" />

                <Button
                    android:id="@+id/repair_station_button"
                    style="@style/Widget.Game.Button.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cst_pad_6"
                    android:text="@string/btn_repair_station" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/focus_burst_button"
                style="@style/Widget.Game.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_focus_burst" />

            <Button
                android:id="@+id/field_patch_button"
                style="@style/Widget.Game.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cst_pad_6"
                android:text="@string/btn_field_patch" />

            <Button
                android:id="@+id/begin_night_button"
                style="@style/Widget.Game.Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cst_pad_6"
                android:text="@string/btn_begin_night" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="@dimen/cst_panel_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_main"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:gravity="center"
            android:text="@string/subtitle_main"
            android:textAppearance="@style/TextAppearance.Game.Subtitle" />

        <Button
            android:id="@+id/start_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/loadout_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_loadout" />

        <Button
            android:id="@+id/help_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_how_to_play" />

        <Button
            android:id="@+id/sound_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_mute" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadout_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="@dimen/cst_panel_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_loadout"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_10"
            android:text="@string/trait_text"
            android:textAppearance="@style/TextAppearance.Game.Body" />

        <Button
            android:id="@+id/trait_salvage_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:text="@string/trait_salvage" />

        <Button
            android:id="@+id/trait_flare_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/trait_flare" />

        <Button
            android:id="@+id/trait_welder_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/trait_welder" />

        <Button
            android:id="@+id/loadout_back_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:text="@string/btn_back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/help_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_help"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:text="@string/help_text"
            android:textAppearance="@style/TextAppearance.Game.Body" />

        <Button
            android:id="@+id/help_back_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pause_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_pause"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <Button
            android:id="@+id/resume_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_resume" />

        <Button
            android:id="@+id/restart_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_restart" />

        <Button
            android:id="@+id/menu_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_menu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_panel"
        style="@style/Widget.Game.Panel"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/result_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_result_victory"
            android:textAppearance="@style/TextAppearance.Game.Title" />

        <TextView
            android:id="@+id/result_stats_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_12"
            android:text="@string/result_stats"
            android:textAppearance="@style/TextAppearance.Game.Body" />

        <Button
            android:id="@+id/result_restart_button"
            style="@style/Widget.Game.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_16"
            android:text="@string/btn_restart" />

        <Button
            android:id="@+id/result_menu_button"
            style="@style/Widget.Game.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cst_pad_8"
            android:text="@string/btn_menu" />
    </LinearLayout>
</FrameLayout>
